--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
 </ul>
 
 <h2>Fisch-Move mit rechts</h2>
-<p><img src="spaceship_links.jpg" width="150px"/><img src="spaceship_unten.jpg" width="150px"/><img src="acht.jpg" width="150px"/><img src="kreuz.jpg" width="150px"/></p>
+<p><img src="fisch_rechts.jpg" width="150px" /><img src="spaceship_links.jpg" width="150px" /><img
+		src="spaceship_unten.jpg" width="150px" /><img src="acht.jpg" width="150px" /><img src="kreuz.jpg"
+		width="150px" /></p>
 <ul>
 	<li>Burger mit rechts</li>
 	<li>obere Kante nach links</li>
