kreuz_gegenüber für Fisch mit rechts

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <h2>Fisch-Move mit rechts</h2>
 <p><img src="fisch_rechts.jpg" width="150px" /><img src="spaceship_links.jpg" width="150px" /><img
 		src="spaceship_unten.jpg" width="150px" /><img src="acht.jpg" width="150px" /><img src="kreuz.jpg"
-		width="150px" /></p>
+		width="150px" /><img src="kreuz_gegenüber.jpg" width="150px" /></p>
 <ul>
 	<li>Burger mit rechts</li>
 	<li>obere Kante nach links</li>
